# advent-of-code-2025

./: .gitignore  MODULE.bazel  README.md  compile_commands.json
common/: common.cc  common.h
day01/: BUILD  main.cc
day02/: BUILD  main.cc
day03/: BUILD  input.txt  main.cc  sample.txt
day04/: main.cc
day05/: main.cc
day06/: main.cc
day07/: main.cc
